Started implementing Integration tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,20 @@ jobs:
     name: Build & test
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: trn_generator
+          POSTGRES_PASSWORD: trn_generator
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
     - uses: actions/checkout@v3
 
@@ -41,3 +55,4 @@ jobs:
       with:
         test_project_path: TrnGeneratorApi/tests/TrnGeneratorApi.Tests
         report_name: "Test results"
+        dotnet_test_args: '-e ConnectionStrings__DefaultConnection="Host=localhost;Username=postgres;Password=trn_generator;Database=trn_generator" ApiKeys__0="12345"'
