--- a/TrnGeneratorApi/tests/TrnGeneratorApi.IntegrationTests/TrnGeneratorApi.IntegrationTests.csproj
+++ b/TrnGeneratorApi/tests/TrnGeneratorApi.IntegrationTests/TrnGeneratorApi.IntegrationTests.csproj
@@ -1,13 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-
+    <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <IsPackable>false</IsPackable>
+    <UserSecretsId>TrnGeneratorApi.IntegrationTests</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -22,6 +24,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\TrnGeneratorApi\TrnGeneratorApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
