Amendments from PR comments

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,7 @@ dotnet_diagnostic.IDE0005.severity = error
 dotnet_sort_system_directives_first = true
 csharp_style_namespace_declarations = file_scoped:warning
 csharp_prefer_braces = true:warning
+
+[src/**/Migrations/*]
+generated_code = true
+
