TRN Generation API - Build and Test (#6)
* Added endpoints to get TRN in 2 different ways for benchmarking

* Fixed build warnings

* Another attempt to fix build issues

* Changed file encoding

* Added benchmark tests to choose between different strategies to generate a TRN

* Made benchmark tests self contained and removed code relating to generating a TRN from a table with a single row per TRN

* Added API Key authentication

* Fixed formatting issues failing build

* Updated to .NET 7

* Fixed build errors due to .NET 7 upgrade

* Started implementing Integration tests

* Added more integration tests

* Amended test project name in build

* Added code to recreate the database as part of integration tests

* Added API endpoints to manage TRN ranges and integration tests

* Hopefully fixed formatting issues

* Updated README

* Amended tests to be able to get connection string from user secrets

* Amendments from PR comments

* Fixed build format issues

* Fixed formatting PR issues

* Added AppInsights and health endpoint

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,17 +18,31 @@ jobs:
     name: Build & test
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_DB: trn_generator
+          POSTGRES_PASSWORD: trn_generator
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
     steps:
     - uses: actions/checkout@v3
 
     - uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '6.0.x'
+        dotnet-version: '7.0.x'
 
     - name: Lint
       run: |
         #https://github.com/dotnet/format/issues/1433
-        dotnet tool install -g dotnet-format --version "6.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet6/nuget/v3/index.json
+        dotnet tool install -g dotnet-format --version "7.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json
         dotnet-format --verify-no-changes
       working-directory: TrnGeneratorApi
 
@@ -39,5 +53,6 @@ jobs:
     - name: Tests
       uses: ./.github/workflows/actions/test
       with:
-        test_project_path: TrnGeneratorApi/tests/TrnGeneratorApi.Tests
+        test_project_path: TrnGeneratorApi/tests/TrnGeneratorApi.IntegrationTests
         report_name: "Test results"
+        dotnet_test_args: '-e ConnectionStrings__DefaultConnection="Host=localhost;Username=postgres;Password=trn_generator;Database=trn_generator" -e ApiKeys__0="12345"'
