Plumbed in Serilog and Sentry

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.json
@@ -1,9 +1,25 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog", "Sentry" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Sentry",
+        "Args": {
+          "minimumBreadcrumbLevel": "Debug",
+          "minimumEventLevel": "Error"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   },
   "AllowedHosts": "*"
 }
