Fixed based on PR comments

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Serilog": {
-    "Using": [ "Serilog", "Sentry" ],
+    "Using": [ "Serilog" ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -10,13 +10,6 @@
     "WriteTo": [
       {
         "Name": "Console"
-      },
-      {
-        "Name": "Sentry",
-        "Args": {
-          "minimumBreadcrumbLevel": "Debug",
-          "minimumEventLevel": "Error"
-        }
       }
     ],
     "Enrich": [ "FromLogContext" ]
