--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,3 +56,28 @@ jobs:
         test_project_path: TrnGeneratorApi/tests/TrnGeneratorApi.IntegrationTests
         report_name: "Test results"
         dotnet_test_args: '-e ConnectionStrings__DefaultConnection="Host=localhost;Username=postgres;Password=trn_generator;Database=trn_generator" -e ApiKeys__0="12345"'
+
+    - name: Publish
+      run: dotnet publish --configuration Release --no-build src/TrnGeneratorApi/TrnGeneratorApi.csproj
+      working-directory: TrnGeneratorApi
+
+    - name: Docker image tag
+      id: imagen
+      run: |
+        echo "tag=$CONTAINER_REGISTRY/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]'):$GITHUB_SHA"  >> $GITHUB_ENV
+
+    - name: Login to GitHub Cotainer Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ${{ env.CONTAINER_REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Docker build & push
+      uses: docker/build-push-action@v2
+      with:
+        context: TrnGeneratorApi/src/TrnGeneratorApi
+        push: true
+        tags: ${{ env.tag }}
+        build-args: |
+          GIT_SHA=${{ github.sha }}
