Set env variable for container registry

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  CONTAINER_REGISTRY: ghcr.io
+
 jobs:
   build:
     name: Build & test
