--- a/.github/workflows/actions/test/action.yml
+++ b/.github/workflows/actions/test/action.yml
@@ -2,13 +2,13 @@ name: Run tests and report results
 
 inputs:
   test_project_path:
-    description: 'The path to the test project'
+    description: "The path to the test project"
     required: true
   report_name:
-    description: 'The name of the test report'
+    description: "The name of the test report"
     required: true
   dotnet_test_args:
-    description: 'Additional arguments to pass to dotnet test'
+    description: "Additional arguments to pass to dotnet test"
     required: false
 
 runs:
@@ -31,6 +31,5 @@ runs:
       if: always()
       with:
         name: ${{ inputs.report_name }}
-        path: '${{ inputs.test_project_path }}/**/*.trx'
+        path: "${{ inputs.test_project_path }}/**/*.trx"
         reporter: dotnet-trx
-
