Updated dotnet files for Logit

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
@@ -6,7 +6,11 @@
     "TracesSampleRate": 0
   },
   "Serilog": {
-    "Using": [ "Serilog", "Sentry" ],
+    "Using": [
+      "Serilog",
+      "Sentry",
+      "Serilog.Sinks.Network"
+    ],
     "MinimumLevel": {
       "Default": "Warning"
     },
@@ -23,6 +27,9 @@
           "minimumBreadcrumbLevel": "Debug",
           "minimumEventLevel": "Error"
         }
+      },
+      {
+        "Name": "TCPSink"
       }
     ]
   }
