--- a/TrnGeneratorApi/src/TrnGeneratorApi/TrnGeneratorApi.csproj
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/TrnGeneratorApi.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Sentry.AspNetCore" Version="3.23.1" />
     <PackageReference Include="Sentry.Serilog" Version="3.23.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Sinks.Network" Version="2.0.2.68" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
