Added Application Insights as a sink for Serilog

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
@@ -6,7 +6,11 @@
     "TracesSampleRate": 0
   },
   "Serilog": {
-    "Using": [ "Serilog", "Sentry" ],
+    "Using": [
+      "Serilog",
+      "Sentry",
+      "Serilog.Sinks.ApplicationInsights"
+    ],
     "MinimumLevel": {
       "Default": "Warning"
     },
@@ -22,6 +26,12 @@
         "Args": {
           "minimumBreadcrumbLevel": "Debug",
           "minimumEventLevel": "Error"
+        }
+      },
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
         }
       }
     ]
