--- a/TrnGeneratorApi/src/TrnGeneratorApi/TrnGeneratorApi.csproj
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/TrnGeneratorApi.csproj
@@ -16,9 +16,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
-    <PackageReference Include="Sentry.AspNetCore" Version="3.23.1" />
-    <PackageReference Include="Sentry.Serilog" Version="3.23.1" />
-    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Sentry.AspNetCore" Version="3.24.0" />
+    <PackageReference Include="Sentry.Serilog" Version="3.24.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
