Added Serilog filter to only log exceptions once

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
@@ -7,6 +7,7 @@
   },
   "Serilog": {
     "Using": [
+      "Serilog.Expressions",
       "Serilog",
       "Sentry",
       "Serilog.Sinks.Network",
@@ -15,6 +16,14 @@
     "MinimumLevel": {
       "Default": "Warning"
     },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "SourceContext = 'Microsoft.AspNetCore.Server.Kestrel'"
+        }
+      }
+    ],
     "WriteTo": [
       {
         "Name": "Console",
