Improve exception handling (#25)
* Added exception handling middleware and endpoint to test HTTP respone for exceptions

* Tweak to build to deploy to dev by default for a manual build

* Added Application Insights as a sink for Serilog

* Removed unnecessary usings

* Tweak to try and only log exceptions once

* Fixed format issues

* Added exception handling middleware to stop same exception getting logged multiple times

* Simplified Task

* Removed temporary /exception endpoint used to test exception handling and logging

* Added Serilog filter to only log exceptions once

* Tidied up temporary code ready to create PR

--- a/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
+++ b/TrnGeneratorApi/src/TrnGeneratorApi/appsettings.Production.json
@@ -7,13 +7,23 @@
   },
   "Serilog": {
     "Using": [
+      "Serilog.Expressions",
       "Serilog",
       "Sentry",
-      "Serilog.Sinks.Network"
+      "Serilog.Sinks.Network",
+      "Serilog.Sinks.ApplicationInsights"
     ],
     "MinimumLevel": {
       "Default": "Warning"
     },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "SourceContext = 'Microsoft.AspNetCore.Server.Kestrel'"
+        }
+      }
+    ],
     "WriteTo": [
       {
         "Name": "Console",
@@ -30,6 +40,12 @@
       },
       {
         "Name": "TCPSink"
+      },
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "telemetryConverter": "Serilog.Sinks.ApplicationInsights.TelemetryConverters.TraceTelemetryConverter, Serilog.Sinks.ApplicationInsights"
+        }
       }
     ]
   }
