--- a/.github/workflows/check_sp.yml
+++ b/.github/workflows/check_sp.yml
@@ -14,9 +14,9 @@ jobs:
       - name: Select Tests
         id: select-tests
         run: |
-          d="{'environment':'dev', 'principal': 's165d01-dqt-contributor', 'keyvault': 's165d01-dv-kv'}"
-          t="{'environment':'test', 'principal': 's165t01-dqt-contributor', 'keyvault': 's165t01-pp-kv'}"
-          p="{'environment':'production', 'principal': 's165p01-dqt-contributor', 'keyvault': 's165p01-pd-kv'}"
+          d="{'environment':'dev', 'principal': 's165d01-dqt-contributor', 'keyvault': 's165d01-trngen-dv-kv'}"
+          t="{'environment':'test', 'principal': 's165t01-dqt-contributor', 'keyvault': 's165t01-trngen-pp-kv'}"
+          p="{'environment':'production', 'principal': 's165p01-dqt-contributor', 'keyvault': 's165p01-trngen-pd-kv'}"
           tests="{ 'data':[ ${d},  ${t},  ${p} ]}"
           echo "tests=${tests}" >> $GITHUB_OUTPUT
   check_expires:
@@ -67,5 +67,5 @@ jobs:
           SLACK_MESSAGE: |
             The Service Principal ${{ fromJson(steps.pwsh_check_expire.outputs.json_data).data.Application }}
             key ${{ fromJson(steps.pwsh_check_expire.outputs.json_data).data.Name }} is due to expire in ${{fromJson(steps.pwsh_check_expire.outputs.json_data).data.ExpiresDays}} days
-            Please follow the process in https://dfe-technical-guidance.london.cloudapps.digital/how-to/security/managing-secrets/#access-key-expiration to renew.
+            Please follow the process in https://technical-guidance.education.gov.uk/infrastructure/hosting/azure-cip/#access-key-expiration to renew.
           SLACK_WEBHOOK: ${{ steps.keyvault-yaml-secret.outputs.SLACK_WEBHOOK }}
