--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,21 +63,16 @@ jobs:
         run: |
           echo "tag=$CONTAINER_REGISTRY/$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]'):$GITHUB_SHA"  >> $GITHUB_OUTPUT
 
-      - name: Login to GitHub Cotainer Registry
-        uses: docker/login-action@v1
+      - name: Build and push docker image
+        id: build-image
+        uses: DFE-Digital/github-actions/build-docker-image@master
         with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Docker build & push
-        uses: docker/build-push-action@v2
-        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           context: TrnGeneratorApi/src/TrnGeneratorApi
-          push: true
-          tags: ${{ steps.image.outputs.tag }}
-          build-args: |
-            GIT_SHA=${{ github.sha }}
+          dockerfile-path: TrnGeneratorApi/src/TrnGeneratorApi/Dockerfile
+          max-cache: false
+          reuse-cache: true
+          snyk-token: ${{ secrets.SNYK_TOKEN }}
 
   deploy_to_dev:
     name: Deploy to dev environment
